--- a/zilch_server/public/zilch.css
+++ b/zilch_server/public/zilch.css
@@ -107,3 +107,28 @@ filter:invert(0.16)
 .page {
     height: 100vh;
 }
+
+div#nameDiv
+{
+    text-align: center;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    transform: translate(0, -50%)
+ }
+
+div#lobby
+{
+    text-align: center;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+}
+
+div#mainGame
+{
+    text-align: center;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+}
