--- a/zilch/src/zilch.css
+++ b/zilch/src/zilch.css
@@ -1,18 +1,3 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-
 .upperStuff
 {
     display: flex;
@@ -118,7 +103,11 @@ div img:hover
 {
 filter:invert(0.16)
 }
-/* 
+
+.page {
+    height: 100vh;
+}
+
 div#nameDiv
 {
     text-align: center;
@@ -142,4 +131,4 @@ div#mainGame
     margin: 0;
     position: absolute;
     top: 50%;
-} */
+}
